--- a/index.html
+++ b/index.html
@@ -96,7 +96,27 @@ border: 1px solid;
                     <li>assistir dexter</li>
                 </ul>
             </h2>
-        </section
-        
+         </ul>
+        </section>
+        <section>
+            <h2>
+                Contatos
+            </h2>
+            <ul>
+                <li>
+                    <a href="">Email: murilo.c.cardoso@aluno.senai.br</a>
+                </li>
+                <li>
+                    <a href="">Github: https://github.com/ferarau</a>
+                </li>
+            </ul>
+        </section>
+
+
+    </main>
+</body>
+</html>
+
+
               
 
